# finger-impedance-analysis

./: .gitignore  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: quickstart.py
extras/: matt.py
finger_impedance/: __init__.py
finger_impedance/analysis/: __init__.py  force.py  hyser_stiffness.py  stiffness.py
finger_impedance/classification/: __init__.py  emg_classifier.py  image_classifier.py
finger_impedance/core/: __init__.py  functions.py  tfestimate.py
finger_impedance/signal/: __init__.py  signal_features.py
finger_impedance/visualization/: __init__.py  figure_plots.py  hyser_plots.py  interactive_plot.py
scripts/: download_hyser.py  hyser.py  hyser_all_1dof.py  main.py  malesevic_all.py  matt.py
tests/: test_features.py  test_filters.py  test_tfestimate.py
