[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finger-impedance-analysis"
version = "0.1.0"
description = "Computational framework for finger impedance modulation, stiffness estimation, and force analysis using HD-sEMG"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Sik Yabgu", email = "sik@sabanciuniv.edu" },
]
keywords = [
    "EMG", "finger", "impedance", "stiffness", "biomechanics",
    "HD-sEMG", "machine learning", "signal processing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "h5py>=3.9",
    "mat73>=0.60",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
image = [
    "opencv-python>=4.8",
    "scikit-image>=0.21",
]
hyser = [
    "samplerate>=0.2",
]
plot = [
    "scienceplots>=2.1",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
all = [
    "finger-impedance-analysis[image,hyser,plot,dev]",
]

[project.urls]
Homepage = "https://github.com/sikyabgu/finger-impedance-analysis"
Repository = "https://github.com/sikyabgu/finger-impedance-analysis"
Issues = "https://github.com/sikyabgu/finger-impedance-analysis/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["finger_impedance*"]

[tool.setuptools.package-data]
finger_impedance = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
